--- a/Stefanini.ViaReport/AuthenticationWindow.xaml
+++ b/Stefanini.ViaReport/AuthenticationWindow.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Stefanini.ViaReport"
         mc:Ignorable="d"
-        Title="Autenticação Jira" Height="140" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="Authenticate Jira" Height="140" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid Margin="0,0,0,0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="60"/>
+            <ColumnDefinition Width="75"/>
             <ColumnDefinition Width="699*"/>
         </Grid.ColumnDefinitions>
-        <Label Content="Usuário" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalContentAlignment="Right" Grid.Column="0" Height="26"/>
-        <Label Content="Senha" Margin="5,36,5,0" HorizontalContentAlignment="Right" VerticalAlignment="Top" Grid.Column="0" Height="26"/>
+        <Label Content="Username" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalContentAlignment="Right" Grid.Column="0" Height="26"/>
+        <Label Content="Password" Margin="5,36,5,0" HorizontalContentAlignment="Right" VerticalAlignment="Top" Grid.Column="0" Height="26"/>
         <TextBox Name="txtUsername" Margin="5,10,5,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Height="18"/>
         <PasswordBox Name="txtPassword" Margin="5,41,5,0" VerticalAlignment="Top" Grid.Column="1" Height="18"/>
-        <Button Name="BtnAuthenticate" Content="Autenticar" Margin="5,70,5,0" VerticalAlignment="Top" Grid.Column="0" Height="22" Grid.ColumnSpan="2" Click="BtnAuthenticate_Click"/>
+        <Button Name="BtnAuthenticate" Content="Authenticate" Margin="5,70,5,0" VerticalAlignment="Top" Grid.Column="0" Height="22" Grid.ColumnSpan="2" Click="BtnAuthenticate_Click"/>
     </Grid>
 </Window>
