AHM-15 Ajuste no layout da tela do Dashboard.

--- a/Stefanini.ViaReport/DashboardWindow.xaml
+++ b/Stefanini.ViaReport/DashboardWindow.xaml
@@ -10,38 +10,44 @@
     <Window.Resources>
         <converters:DashboardIssuesConverter x:Key="DashboardIssuesConverter" />
     </Window.Resources>
-    <DockPanel>
-        <Grid>
-            <GroupBox Header="Throughput" Margin="4,4,402,220">
-                <DataGrid Name="DgThroughput" Margin="0,0,0,0" AutoGenerateColumns="False" CanUserAddRows="false">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Date}" Header="Date" />
-                        <DataGridTextColumn Binding="{Binding Value}" Header="Value" />
-                        <DataGridHyperlinkColumn Binding="{Binding Issues}" Header="Detail" ContentBinding="{Binding Issues, Converter={StaticResource DashboardIssuesConverter}}">
-                            <DataGridHyperlinkColumn.ElementStyle>
-                                <Style>
-                                    <EventSetter Event="Hyperlink.Click" Handler="DgDataColumnLink_Click"/>
-                                </Style>
-                            </DataGridHyperlinkColumn.ElementStyle>
-                        </DataGridHyperlinkColumn>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </GroupBox>
-            <GroupBox Header="Lead Time" Margin="402,4,4,220">
-                <DataGrid Name="DgLeadTime" Margin="0,0,0,0" d:ItemsSource="{d:SampleData ItemCount=5}"/>
-            </GroupBox>
-            <GroupBox Header="Cycle Time" Margin="4,220,402,4">
-                <DataGrid Name="DgCycleTime" Margin="0,0,0,0" d:ItemsSource="{d:SampleData ItemCount=5}"/>
-            </GroupBox>
-            <GroupBox Header="Quarter Epics" Margin="402,220,4,4">
-                <DataGrid Name="DgQuarterEpics"  Margin="0,0,0,0" AutoGenerateColumns="False" CanUserAddRows="false">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Issues[0].Key}" Header="Key" />
-                        <DataGridTextColumn Binding="{Binding Issues[0].Description}" Header="Description" />
-                        <DataGridTextColumn Binding="{Binding Value, StringFormat={}{0:0}%}" Header="Percent" />
-                    </DataGrid.Columns>
-                </DataGrid>
-            </GroupBox>
-        </Grid>
-    </DockPanel>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="0.5*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*" />
+            <RowDefinition Height="0.5*" />
+        </Grid.RowDefinitions>
+        <GroupBox Grid.Row="0" Grid.Column="0" Header="Throughput">
+            <DataGrid Name="DgThroughput" AutoGenerateColumns="False" CanUserAddRows="false">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding Date}" Header="Date" />
+                    <DataGridTextColumn Binding="{Binding Value}" Header="Value" />
+                    <DataGridHyperlinkColumn Binding="{Binding Issues}" Header="Detail" ContentBinding="{Binding Issues, Converter={StaticResource DashboardIssuesConverter}}">
+                        <DataGridHyperlinkColumn.ElementStyle>
+                            <Style>
+                                <EventSetter Event="Hyperlink.Click" Handler="DgDataColumnLink_Click"/>
+                            </Style>
+                        </DataGridHyperlinkColumn.ElementStyle>
+                    </DataGridHyperlinkColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </GroupBox>
+        <GroupBox Grid.Row="0" Grid.Column="1" Header="Lead Time">
+            <DataGrid Name="DgLeadTime" Margin="0,0,0,0" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        </GroupBox>
+        <GroupBox Grid.Row="1" Grid.Column="0" Header="Cycle Time">
+            <DataGrid Name="DgCycleTime" Margin="0,0,0,0" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        </GroupBox>
+        <GroupBox Grid.Row="1" Grid.Column="1" Header="Quarter Epics">
+            <DataGrid Name="DgQuarterEpics"  Margin="0,0,0,0" AutoGenerateColumns="False" CanUserAddRows="false">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding Issues[0].Key}" Header="Key" />
+                    <DataGridTextColumn Binding="{Binding Issues[0].Description}" Header="Description" />
+                    <DataGridTextColumn Binding="{Binding Value, StringFormat={}{0:0}%}" Header="Percent" />
+                </DataGrid.Columns>
+            </DataGrid>
+        </GroupBox>
+    </Grid>
 </Window>
