--- a/Stefanini.ViaReport.Updater/MainWindow.xaml
+++ b/Stefanini.ViaReport.Updater/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Stefanini.ViaReport.Updater"
         mc:Ignorable="d"
-        Title="[Jira] EasyBI AHM - Updater" Height="120" Width="350" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ContentRendered="Window_ContentRendered">
+        Title="Squad Manager - Updater" Height="120" Width="350" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ContentRendered="Window_ContentRendered">
     <DockPanel>
         <Label DockPanel.Dock="Top" Name="LbStatus" Margin="5,5,5,0" Height="26" VerticalAlignment="Top"/>
         <Label DockPanel.Dock="Top" Margin="5,5,5,0" Content="A aplicação será iniciada automaticamente após conclusão." Height="26"/>
